Try and fix footer being mis-positioned in some browsers -- still broken in Mobile Safari

--- a/src/client/content/css/index.css
+++ b/src/client/content/css/index.css
@@ -6,7 +6,7 @@ html {
 
 html,
 body {
-  height: 100%;
+  min-height: 100%;
   margin: 0
 }
 
@@ -187,6 +187,7 @@ aside.word-nav {
 
 main article {
   width: 100%;
+  min-height: 100%;
   background-color: #2196F3;
 }
 
@@ -303,8 +304,9 @@ img {
  *============================================================================*/
 
 footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
+  left: 0;
   width: 100%;
   height: 50px;
   border-top: 5px solid #80D8FF;
